# learning-cpp

./: .clang-format  .envrc  .gitignore  .gitmodules  .ignore  README.md  flake.nix  justfile
tasks/01-caches/test/belady/: CMakeLists.txt  config.json  gentest.py
tasks/01-caches/test/belady/src/: belady.cc
tasks/01-caches/test/lfuc/: CMakeLists.txt  config.json  gentest.py
tasks/01-caches/test/lfuc/src/: lfuc.cc
tasks/01-caches/test/lfudac/: CMakeLists.txt  config.json  gentest.py  test.sh
tasks/01-caches/test/lfudac/src/: lfudac.cc
tasks/02-geometry/01-hw3d/lib/: CMakeLists.txt
tasks/02-geometry/01-hw3d/lib/test/: test_aabb.cc  test_equal.cc  test_line2.cc  test_plane.cc  test_point2.cc  test_point3.cc  test_segment1.cc  test_segment2.cc  test_segment3.cc  test_triangle2.cc  test_triangle3.cc  test_vec2.cc  test_vec3.cc
tasks/02-geometry/01-hw3d/test/fcl-reference/: CMakeLists.txt  resources
tasks/02-geometry/01-hw3d/test/intersect/: CMakeLists.txt  config.json  test.sh  testgen.py
tasks/02-geometry/02-vulkan/: .gitignore  CMakeLists.txt  README.md  flake.nix
tasks/02-geometry/02-vulkan/app/: application.cc  application.hpp  config.hpp  gui.cc  gui.hpp  pipeline.hpp  platform.hpp  triangles.cc
tasks/02-geometry/02-vulkan/app/misc/: ubo.hpp  utility.hpp  vertex.hpp
tasks/02-geometry/02-vulkan/shaders/: triangles.frag  triangles.vert  wireframe.frag  wireframe.vert
tasks/02-geometry/02-vulkan/src/ezvk/: window.cc
tasks/03-trees/01-hwt/: CMakeLists.txt  README.md
tasks/03-trees/01-hwt/lib/: CMakeLists.txt
tasks/03-trees/01-hwt/lib/include/: order_statistic_set.hpp
tasks/03-trees/01-hwt/lib/src/: rb_tree_ranged.cc
tasks/03-trees/01-hwt/lib/test/: test_private.cc
tasks/03-trees/01-hwt/test/: CMakeLists.txt
tasks/03-trees/01-hwt/test/queries/: config.json  naivegenerator.py
tasks/03-trees/02-splay/lib/: CMakeLists.txt
tasks/03-trees/02-splay/lib/include/: splay_order_set.hpp
tasks/03-trees/02-splay/lib/src/: bs_order_tree.cc
tasks/03-trees/02-splay/lib/test/: test_private.cc
tasks/03-trees/02-splay/test/benchmark/: CMakeLists.txt  ansgen.sh  config.json  testgen.py
tasks/03-trees/02-splay/test/queries/: .gitignore  CMakeLists.txt
tasks/03-trees/03-rmq/test/rmq-queries/: CMakeLists.txt  config.json  gentest.py
tasks/03-trees/04-kd/: CMakeLists.txt  README.md
tasks/03-trees/04-kd/lib/: CMakeLists.txt
tasks/03-trees/04-kd/lib/include/: kd_tree.hpp  point_n.hpp
tasks/03-trees/04-kd/lib/test/: main.cc
tasks/03-trees/04-kd/test/: CMakeLists.txt
tasks/03-trees/04-kd/test/closest/: CMakeLists.txt  config.json  testgen.py
tasks/04-linmath/01-hwmx/lib/: CMakeLists.txt
tasks/04-linmath/01-hwmx/lib/include/: contiguous_matrix.hpp  equal.hpp  matrix.hpp  utility.hpp  vector.hpp
tasks/04-linmath/01-hwmx/lib/test/: test_contiguous_matrix.cc  test_matrix.cc  test_vector.cc
tasks/04-linmath/01-hwmx/test/determinant/: CMakeLists.txt  config.json  testgen.py
tasks/04-linmath/02-resistors/lib/: CMakeLists.txt
tasks/04-linmath/02-resistors/lib/include/: equal.hpp  utility.hpp
tasks/04-linmath/02-resistors/lib/test/: main.cc  test_contiguous_matrix.cc  (+4 more)
tasks/04-linmath/02-resistors/network/: CMakeLists.txt  test.sh
tasks/05-paracl/: .gitignore  CMakeLists.txt  README.md
tasks/05-paracl/ezvis/: CMakeLists.txt  README.md
tasks/05-paracl/ezvis/test/: CMakeLists.txt  ezvis.cc
tasks/05-paracl/include/: codegen.hpp
tasks/05-paracl/include/bytecode_vm/: bytecode_builder.hpp  decl_vm.hpp  disassembly.hpp  opcodes.hpp  virtual_machine.hpp
tasks/05-paracl/include/frontend/: dumper.hpp  error.hpp  frontend_driver.hpp  scanner.hpp  source.hpp  symtab.hpp
tasks/05-paracl/include/utils/: algorithm.hpp  concepts.hpp  files.hpp  misc.hpp  transparent.hpp
tasks/05-paracl/scripts/: makeast.sh  test_compare.sh  test_fail.sh
tasks/05-paracl/src/: common.hpp  pclc.cc  pcldis.cc  pclvm.cc
tasks/05-paracl/src/bytecode_vm/: decl_vm.cc
tasks/05-paracl/src/frontend/: ast_copier.cc  dumper.cc
tasks/05-paracl/test/: CMakeLists.txt
tasks/05-paracl/test/basic/: abs.pcl  assignments.pcl  fact.pcl  fib.pcl  if.pcl  while.pcl  while.pcl.in
tasks/05-paracl/test/blocks/: block.pcl  block_with_return_and_side_effect.pcl  cond_block.pcl  conditional_return.pcl  emptyexpr.pcl  explicit_return.pcl  nested_and_chained_blocks.pcl  nested_block_returns.pcl  nested_blocks.pcl  print_block.pcl  print_sum_of_blocks.pcl  simple_block_return.pcl  simple_block_sum.pcl  unused_block_return_value.pcl
tasks/05-paracl/test/errors/: ambiguous_call.pcl  call_in_sum.pcl  call_of_int.pcl  func_add.pcl  ill_formed.pcl  mismatch_call.pcl  mismatch_return_block.pcl  nested_redefinition.pcl  recursive.pcl  redefinition.pcl  rename.pcl  undefined_call.pcl  use_of_void.pcl
tasks/05-paracl/test/functions/: arg_call.pcl  args_of_different_types.pcl  basic.pcl  basic2.pcl  call_in_sum.pcl  calls.pcl  conditional_return.pcl  conditional_return_2.pcl  fact.pcl  fact_recursive.pcl  function_def_to_ptr_conv_print.pcl  increment.pcl  nested.pcl  nested_block_in_function.pcl  recursive_fib.pcl  return_1_no_args.pcl  return_assignment.pcl  return_block_as_an_arg.pcl  several_args.pcl  void_function.pcl  void_function_composition.pcl
tasks/05-paracl/test/globals/: 1.pcl
tasks/05-paracl/test/morefunctions/: test1.pcl  test2.pcl  test4.pcl  test6.pcl
tasks/05-paracl/test/types/: 1.pcl  2.pcl  3.pcl  4.pcl  5.pcl  6.pcl
tasks/06-compute/01-bitonic-sort/: .gitignore  CMakeLists.txt  README.md  bitonic.cc  flake.nix  matmult.cc  oclinfo.cc  test.sh  vadd.cc
tasks/06-compute/01-bitonic-sort/common/: opencl_include.hpp  selector.hpp  utils.hpp
tasks/06-compute/01-bitonic-sort/include/: bitonic.hpp
tasks/06-compute/01-bitonic-sort/kernels/: bitonic_local_initial.cl  bitonic_naive.cl  matmult_naive.cl  matmult_tiled.cl  matmult_tiled_arb.cl
tasks/06-compute/01-bitonic-sort/resources/: test0.dat.ans  test3.dat.ans  test4.dat.ans  test5.dat.ans  test7.dat.ans  test9.dat.ans
tasks/06-compute/01-bitonic-sort/scripts/: bitonic-measure.py  kernel2hpp.py  testgen.py
(+240 files in other folders)
